--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,4 +32,14 @@
         <item name="android:backgroundTint">@color/neutral_300</item>
         <item name="android:stateListAnimator">@null</item>
     </style>
+
+    <style name="LabelButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:fontFamily">@font/roboto_bold</item>
+        <item name="android:textColor">@color/accent_500</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:letterSpacing">0.06</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:textSize">@dimen/small</item>
+    </style>
 </resources>
