--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--GLOBAL-->
+    <dimen name="corner_radius">8dp</dimen>
+
     <!--TEXTS-->
     <dimen name="heading">36sp</dimen>
     <dimen name="body">18sp</dimen>
@@ -9,12 +12,12 @@
     <!--BUTTONS-->
     <dimen name="control_width">320dp</dimen>
     <dimen name="control_height">60dp</dimen>
+    <dimen name="inset_top">3dp</dimen>
+    <dimen name="inset_bot">3dp</dimen>
+    <dimen name="gap">2dp</dimen>
 
     <!--INPUT TEXT-->
     <dimen name="padding_start">20sp</dimen>
     <dimen name="padding_end">20sp</dimen>
-
-    <dimen name="corner_radius">8dp</dimen>
-    <dimen name="padding_left">16dp</dimen>
-    <dimen name="padding_right">16dp</dimen>
+    <dimen name="padding_end_with_icon">55sp</dimen>
 </resources>
