--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,23 +22,27 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:letterSpacing">0.06</item>
         <item name="android:stateListAnimator">@null</item>
+        <item name="android:insetTop">@dimen/inset_top</item>
+        <item name="android:insetBottom">@dimen/inset_bot</item>
     </style>
 
     <style name="SecondaryButton" parent="Widget.MaterialComponents.Button">
         <item name="android:fontFamily">@font/roboto_bold</item>
-        <item name="android:textColor">@color/neutral_900</item>
+        <item name="android:textColor">@color/neutral_700</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:letterSpacing">0.06</item>
         <item name="android:backgroundTint">@color/neutral_300</item>
         <item name="android:stateListAnimator">@null</item>
+        <item name="android:insetTop">@dimen/inset_top</item>
+        <item name="android:insetBottom">@dimen/inset_bot</item>
     </style>
 
     <style name="LabelButton" parent="Widget.MaterialComponents.Button">
         <item name="android:fontFamily">@font/roboto_bold</item>
-        <item name="android:textColor">@color/accent_500</item>
+        <item name="android:textColor">@drawable/behavior_btn_label</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:letterSpacing">0.06</item>
-        <item name="android:backgroundTint">@android:color/transparent</item>
+        <item name="android:letterSpacing">0.04</item>
+        <item name="android:backgroundTint">@color/white</item>
         <item name="android:stateListAnimator">@null</item>
         <item name="android:textSize">@dimen/small</item>
     </style>
