--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.Hygeia" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="android:windowFullscreen">false</item>
-        <item name="colorPrimary">@color/accent_500</item>
+<!--        <item name="colorPrimary">@color/accent_500</item>-->
         <item name="colorPrimaryVariant">@color/accent_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -11,22 +11,30 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimary</item>
+        <item name="android:statusBarColor">@color/accent_500</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textSize">@dimen/body</item>
     </style>
 
-    <style name="PrimaryButton" parent="Widget.MaterialComponents.Button">
+    <!--BUTTONS STYLE-->
+
+    <style name="PrimaryButtonLarge" parent="Widget.MaterialComponents.Button">
+        <item name="cornerRadius">@dimen/corner_radius</item>
+        <item name="android:backgroundTint">@color/accent_500</item>
         <item name="android:fontFamily">@font/roboto_bold</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:letterSpacing">0.06</item>
         <item name="android:stateListAnimator">@null</item>
         <item name="android:insetTop">@dimen/inset_top</item>
         <item name="android:insetBottom">@dimen/inset_bot</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/control_height</item>
+        <item name="android:layout_marginStart">@dimen/margin_x</item>
+        <item name="android:layout_marginEnd">@dimen/margin_x</item>
     </style>
 
-    <style name="SecondaryButton" parent="Widget.MaterialComponents.Button">
+    <style name="SecondaryButtonLarge" parent="Widget.MaterialComponents.Button">
         <item name="android:fontFamily">@font/roboto_bold</item>
         <item name="android:textColor">@color/neutral_700</item>
         <item name="android:textAllCaps">false</item>
@@ -35,15 +43,101 @@
         <item name="android:stateListAnimator">@null</item>
         <item name="android:insetTop">@dimen/inset_top</item>
         <item name="android:insetBottom">@dimen/inset_bot</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/control_height</item>
+        <item name="android:layout_marginStart">@dimen/margin_x</item>
+        <item name="android:layout_marginEnd">@dimen/margin_x</item>
     </style>
 
     <style name="LabelButton" parent="Widget.MaterialComponents.Button">
         <item name="android:fontFamily">@font/roboto_bold</item>
-        <item name="android:textColor">@drawable/behavior_btn_label</item>
+        <item name="android:textColor">@drawable/cstm_color_btn_label</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:letterSpacing">0.04</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:stateListAnimator">@null</item>
         <item name="android:textSize">@dimen/small</item>
     </style>
+
+    <style name="IconButtonBack" parent="Widget.MaterialComponents.Button">
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:layout_width">@dimen/size_icon</item>
+        <item name="android:layout_height">@dimen/size_icon</item>
+        <item name="android:layout_alignParentEnd">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:paddingStart">@dimen/icon_padding_x</item>
+        <item name="android:paddingEnd">@dimen/icon_padding_x</item>
+        <item name="android:layout_marginStart">@dimen/icon_margin_start</item>
+        <item name="android:layout_marginTop">@dimen/icon_margin_top</item>
+    </style>
+
+    <!--TEXT FIELDS STYLE-->
+
+    <style name="TextFieldWithIconWrapper">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/margin_x</item>
+        <item name="android:layout_marginEnd">@dimen/margin_x</item>
+    </style>
+
+    <style name="TextFieldIcon">
+        <item name="android:layout_width">@dimen/size_icon</item>
+        <item name="android:layout_height">@dimen/size_icon</item>
+        <item name="android:layout_alignParentEnd">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_marginEnd">@dimen/icon_margin_end</item>
+        <item name="android:textColor">@android:color/transparent</item>
+    </style>
+
+    <style name="PrimaryTextField" parent="Widget.AppCompat.EditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/control_height</item>
+        <item name="android:layout_marginStart">@dimen/margin_x</item>
+        <item name="android:layout_marginEnd">@dimen/margin_x</item>
+        <item name="android:paddingStart">@dimen/padding_start</item>
+        <item name="android:paddingEnd">@dimen/padding_end</item>
+    </style>
+
+    <style name="PrimaryTextFieldWithIcon" parent="Widget.AppCompat.EditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/control_height</item>
+        <item name="android:paddingStart">@dimen/padding_start</item>
+        <item name="android:paddingEnd">@dimen/padding_end_with_icon</item>
+    </style>
+
+    <!--LABELS STYLE-->
+
+    <style name="TextHeadingRegular" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/margin_x</item>
+        <item name="android:layout_marginEnd">@dimen/margin_x</item>
+        <item name="android:layout_marginTop">@dimen/heading_margin_top</item>
+        <item name="android:fontFamily">@font/spoof_regular</item>
+        <item name="android:textSize">@dimen/heading</item>
+        <item name="android:textColor">@color/neutral_900</item>
+    </style>
+
+    <style name="TextHeadingColored" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/margin_x</item>
+        <item name="android:layout_marginEnd">@dimen/margin_x</item>
+        <item name="android:layout_marginTop">@dimen/line_spacing</item>
+        <item name="android:fontFamily">@font/spoof_bold</item>
+        <item name="android:textSize">@dimen/heading</item>
+        <item name="android:textColor">@color/accent_500</item>
+    </style>
+
+    <style name="TextBody" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/margin_x</item>
+        <item name="android:layout_marginEnd">@dimen/margin_x</item>
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textSize">@dimen/body</item>
+        <item name="android:textColor">@color/neutral_500</item>
+    </style>
+
 </resources>
