--- a/app/src/main/res/drawable/bg_textfield_default.xml
+++ b/app/src/main/res/drawable/bg_textfield_default.xml
@@ -2,6 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     android:padding="10dp" >
-    <solid android:color="@color/neutral_300" />
-    <corners android:radius="@dimen/corner_radius" />
+    <solid
+        android:color="@color/neutral_300" />
+    <corners
+        android:radius="@dimen/corner_radius" />
 </shape>
