--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,12 +6,16 @@
     <color name="neutral_500">#FF757575</color>
     <color name="neutral_700">#FF575757</color>
     <color name="neutral_900">#FF323232</color>
+    <color name="accent_50">#FFF3FFFD</color>
     <color name="accent_500">#FF0CA688</color>
     <color name="accent_700">#FF00796B</color>
-    <color name="accent_200">#FF7FCBBC</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
 
-    <color name="danger">#FFF14726</color>
+    <color name="ripple_primary">#FF00796B</color>
+    <color name="ripple_secondary">#FFCACACA</color>
+
+    <color name="danger_50">#FFFFF6F5</color>
+    <color name="danger_500">#FFF14726</color>
     <color name="warning">#FFF9C610</color>
 </resources>
