--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -37,7 +37,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:autofillHints=""
-        android:background="@drawable/bg_textfield_selector"
         android:hint="@string/hint_first_name"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +49,6 @@
         style="@style/PrimaryTextField"
         android:layout_marginTop="8dp"
         android:autofillHints=""
-        android:background="@drawable/bg_textfield_selector"
         android:hint="@string/hint_last_name"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +61,6 @@
         style="@style/PrimaryTextField"
         android:layout_marginTop="8dp"
         android:autofillHints=""
-        android:background="@drawable/bg_textfield_selector"
         android:hint="@string/hint_email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +73,6 @@
         style="@style/PrimaryTextField"
         android:layout_marginTop="8dp"
         android:autofillHints=""
-        android:background="@drawable/bg_textfield_selector"
         android:hint="@string/hint_phone_number"
         android:inputType="phone"
         android:maxLength="11"
@@ -97,7 +93,6 @@
             android:id="@+id/txtNewPassword"
             style="@style/PrimaryTextFieldWithIcon"
             android:autofillHints=""
-            android:background="@drawable/bg_textfield_selector"
             android:hint="@string/hint_password"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +102,7 @@
         <ToggleButton
             android:id="@+id/tglShowPassword"
             style="@style/TextFieldIcon"
-            android:background="@drawable/ic_visibility"
+            android:background="@drawable/ic_visibility_selector"
             tools:ignore="RelativeOverlap,TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck" />
     </RelativeLayout>
 
@@ -115,7 +110,6 @@
         android:id="@+id/cmbGender"
         style="@style/SpinnerGender"
         android:layout_marginTop="8dp"
-        android:background="@drawable/bg_textfield_selector"
         android:entries="@array/arr_gender"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleOnCreateAccount1"
@@ -161,15 +155,15 @@
         <EditText
             android:id="@+id/txtNewBirthDate"
             style="@style/PrimaryTextField"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
             android:layout_marginStart="0dp"
             android:layout_marginEnd="0dp"
             android:autofillHints=""
-            android:background="@drawable/bg_textfield_selector"
             android:ems="10"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:hint="@string/hint_birth_date"
             android:inputType="date"
+            android:longClickable="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="VisualLintTextFieldSize" />
