--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/lblCreateAccountHeading1" />
 
     <EditText
-        android:id="@+id/txtNewFirstName"
+        android:id="@+id/txtUsername"
         style="@style/PrimaryTextField"
         android:layout_width="0dp"
         android:layout_marginStart="8dp"
@@ -55,7 +55,7 @@
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNewFirstName"
+        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
         tools:ignore="VisualLintTextFieldSize" />
 
     <EditText
@@ -102,7 +102,7 @@
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="VisualLintTextFieldSize" />
+            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
 
         <ToggleButton
             android:id="@+id/tglShowPassword"
@@ -161,18 +161,18 @@
         <EditText
             android:id="@+id/txtNewBirthDate"
             style="@style/PrimaryTextField"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
             android:layout_marginStart="0dp"
             android:layout_marginEnd="0dp"
             android:autofillHints=""
             android:background="@drawable/bg_textfield_selector"
             android:ems="10"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:hint="@string/hint_birth_date"
             android:inputType="date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="VisualLintTextFieldSize" />
+            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
 
         <Button
             android:id="@+id/btnCalendar"
