--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,7 +21,7 @@
 
     <style name="PrimaryButtonLarge" parent="Widget.MaterialComponents.Button">
         <item name="cornerRadius">@dimen/corner_radius</item>
-        <item name="android:backgroundTint">@color/accent_500</item>
+        <item name="android:backgroundTint">@color/bg_primary_btn_selector</item>
         <item name="android:fontFamily">@font/roboto_bold</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:letterSpacing">0.06</item>
@@ -58,7 +58,7 @@
         <item name="android:letterSpacing">0.04</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:stateListAnimator">@null</item>
-        <item name="android:textSize">@dimen/small</item>
+        <item name="android:textSize">@dimen/body</item>
     </style>
 
     <style name="IconButtonBack" parent="Widget.MaterialComponents.Button">
@@ -92,6 +92,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/margin_x</item>
         <item name="android:layout_marginEnd">@dimen/margin_x</item>
+        <item name="android:layout_marginTop">8dp</item>
     </style>
 
     <style name="TextFieldIcon">
@@ -112,6 +113,7 @@
         <item name="android:paddingStart">@dimen/padding_start</item>
         <item name="android:paddingEnd">@dimen/padding_end</item>
         <item name="android:background">@drawable/bg_textfield_default</item>
+        <item name="android:layout_marginTop">8dp</item>
     </style>
 
     <style name="PrimaryTextFieldWithIcon" parent="Widget.AppCompat.EditText">
@@ -154,6 +156,17 @@
         <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textSize">@dimen/body</item>
         <item name="android:textColor">@color/neutral_500</item>
+    </style>
+
+    <style name="TextBodyError" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/margin_x_error</item>
+        <item name="android:layout_marginEnd">@dimen/margin_x_error</item>
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textSize">@dimen/small</item>
+        <item name="android:textColor">@color/danger_500</item>
+        <item name="android:layout_marginTop">2dp</item>
     </style>
 
 </resources>
