Added forgot password

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout_login"
+    android:id="@+id/mainLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/imgBrandLogo"
@@ -63,7 +62,7 @@
     <TextView
         android:id="@+id/lblLoginErrorMsg1"
         style="@style/TextBodyError"
-        android:text="@string/validate_login_email_exists"
+        android:text="@string/validate_placeholder_msg_for_multi_error"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,9 +94,9 @@
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/lblLoginErrorMsg2"
+        android:id="@+id/lblLoginErrorMsg3"
         style="@style/TextBodyError"
-        android:text="@string/validate_login_password"
+        android:text="@string/validate_password_incorrect"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +110,7 @@
         android:text="@string/btn_forgot_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lblLoginErrorMsg2"
+        app:layout_constraintTop_toBottomOf="@id/lblLoginErrorMsg3"
         tools:ignore="VisualLintButtonSize" />
 
     <Button
