--- a/app/src/main/res/layout/frg_create_account_part2.xml
+++ b/app/src/main/res/layout/frg_create_account_part2.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout_createAccountPart2"
+    android:id="@+id/mainLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".CreateAccountPart2">
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/btnBackToCreateAccountPart1"
@@ -65,20 +64,11 @@
     <TextView
         android:id="@+id/lblCreateAccountErrorMsg1"
         style="@style/TextBodyError"
-        android:text="@string/validate_create_account_email_taken"
+        android:text="@string/validate_placeholder_msg_for_multi_error"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNewEmail" />
-
-    <TextView
-        android:id="@+id/lblCreateAccountErrorMsg2"
-        style="@style/TextBodyError"
-        android:text="@string/validate_create_account_email_format"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblCreateAccountErrorMsg1" />
 
     <EditText
         android:id="@+id/txtNewPhoneNumber"
@@ -89,7 +79,7 @@
         android:maxLength="11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lblCreateAccountErrorMsg2"
+        app:layout_constraintTop_toBottomOf="@id/lblCreateAccountErrorMsg1"
         tools:ignore="VisualLintTextFieldSize" />
 
     <RelativeLayout
@@ -117,9 +107,9 @@
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/lblCreateAccountErrorMsg3"
+        android:id="@+id/lblCreateAccountErrorMsg2"
         style="@style/TextBodyError"
-        android:text="@string/validate_create_account_password_format"
+        android:text="@string/validate_password_format"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -130,7 +120,7 @@
         style="@style/TextFieldWithIconWrapper"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblCreateAccountErrorMsg3">
+        app:layout_constraintTop_toBottomOf="@+id/lblCreateAccountErrorMsg2">
 
         <EditText
             android:id="@+id/txtNewConfirmPassword"
@@ -150,9 +140,9 @@
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/lblCreateAccountErrorMsg4"
+        android:id="@+id/lblCreateAccountErrorMsg3"
         style="@style/TextBodyError"
-        android:text="@string/validate_create_account_password_matched"
+        android:text="@string/validate_password_matched"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
