--- a/app/src/main/res/layout/frg_create_account_part3.xml
+++ b/app/src/main/res/layout/frg_create_account_part3.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layout_createAccountPart3"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".CreateAccountPart3">
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/btnBackToCreateAccountPart2"
@@ -67,7 +65,7 @@
     <TextView
         android:id="@+id/titleOnCreateAccountPart3.2"
         style="@style/TextBody"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="2dp"
         android:text="@string/title_review_birthdate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +87,7 @@
     <TextView
         android:id="@+id/titleOnCreateAccountPart3.3"
         style="@style/TextBody"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="2dp"
         android:text="@string/title_review_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +109,7 @@
     <TextView
         android:id="@+id/titleOnCreateAccountPart3.4"
         style="@style/TextBody"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="2dp"
         android:text="@string/title_review_phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +131,7 @@
     <TextView
         android:id="@+id/titleOnCreateAccountPart3.5"
         style="@style/TextBody"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="2dp"
         android:text="@string/title_review_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
