--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <!--GLOBAL-->
     <dimen name="corner_radius">8dp</dimen>
+    <dimen name="corner_rounded">100dp</dimen>
     <dimen name="heading_margin_top">80dp</dimen>
     <dimen name="margin_x">30dp</dimen>
     <dimen name="margin_x_error">50dp</dimen>
@@ -32,6 +33,8 @@
 
     <!--ICONS-->
     <dimen name="size_icon">28sp</dimen>
+    <dimen name="dialog_icon_size">34dp</dimen>
+    <dimen name="dialog_icon_padding">10dp</dimen>
     <dimen name="icon_margin_top">20dp</dimen>
     <dimen name="icon_margin_start">26dp</dimen>
     <dimen name="icon_margin_end">14dp</dimen>
